--- a/CA.html
+++ b/CA.html
@@ -400,8 +400,8 @@ Since a CA is used on a contingency table, the data used for this analysis in ja
 <h2><strong>Potential issue(s)</strong></h2>
 <p>Unlike the PCA or the MCA, where the <em>Number of factors</em> in the <strong><em>Automatic Description of the Axes</em></strong> section must be less than or equal to the number of active variables, here it must be strictly lower than the number of active variables (columns in this context). If this condition is not met, an error will occur. <br><br /></p>
 </div>
-<div id="output-example" class="section level2">
-<h2><strong>Output example</strong></h2>
+<div id="example" class="section level2">
+<h2><strong>Example</strong></h2>
 <p>The data used in this example is the music data set. See the figure below for the settings: <img src="images/CA7.png" width="40%" style="display: block; margin: auto auto auto 0;" /><img src="images/CA8.png" width="40%" style="display: block; margin: auto auto auto 0;" /><img src="images/CA9.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 <div id="representation-of-the-rows" class="section level3">
 <h3>Representation of the rows</h3>
