--- a/catdes.html
+++ b/catdes.html
@@ -11,7 +11,7 @@
 
 
 
-<title>catdes</title>
+<title>Description of a categorical or continuous variable with qualitative and quantitative data</title>
 
 <script src="site_libs/header-attrs-2.8/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -368,7 +368,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">catdes</h1>
+<h1 class="title toc-ignore">Description of a categorical or continuous variable with qualitative and quantitative data</h1>
 
 </div>
 
@@ -376,11 +376,11 @@ div.tocify {
 <p>The first method of the <strong>Automatic Univariate Description</strong> submenu is the description of either continuous or categorical variable by both continuous and categorical variables. <img src="images/catdes1.png" width="80%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 <div id="the-interface" class="section level2">
 <h2><strong>The interface</strong></h2>
-<p>As it can be seen in the figure above, the interface is very simple and only have 3 fields you need to worry about. <br><br /> <img src="images/catdes2.png" width="60%" style="display: block; margin: auto auto auto 0;" /> Firstly, the <strong><em>Variable to Characterize</em></strong> take either a continuous or categorical variable that you wish to describe. Then, you put the continuous and categorical variables you want to use for the characterization of the variable. Lastly, the <strong><em>Significance threshold</em></strong> option set the threshold under which a variable is significantly describing the variable to characterize. <br><br /></p>
+<p>As it can be seen in the figure above, the interface is very simple and only has 3 fields you need to worry about. <br><br /> <img src="images/catdes2.png" width="60%" style="display: block; margin: auto auto auto 0;" /> Firstly, the <strong><em>Variable to Characterize</em></strong> take either a continuous or categorical variable that you wish to describe. Then, you put the continuous and categorical variables you want to use for the characterization of the variable. Lastly, the <strong><em>Significance threshold</em></strong> option set the threshold under which a variable is significantly describing the variable to characterize. <br><br /></p>
 </div>
 <div id="examples" class="section level2">
 <h2><strong>Examples</strong></h2>
-<p>There two ways of using this methods. You can either use it to see what variables are significantly describing the variable to characterize or you can set the <strong><em>Significance threshold</em></strong> to 100 so that you have the indicators (R², correlation, etc.) for all the variables.<br />
+<p>There are two ways of using this methods. You can either use it to see what variables are significantly describing the variable to characterize or you can set the <strong><em>Significance threshold</em></strong> to 100 so that you have the indicators (R², correlation, etc.) for all the variables.<br />
 For the following examples, we will be using the bugs data set (available with Jamovi): <img src="images/catdesbugs.png" width="80%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 <div id="description-of-a-continuous-variable" class="section level3">
 <h3>Description of a continuous variable</h3>
