--- a/textual.html
+++ b/textual.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Description of variable by categorical / quantative data</title>
+<title>Description of a categorical variable using textual data</title>
 
 <script src="site_libs/header-attrs-2.8/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -368,7 +368,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Description of variable by categorical / quantative data</h1>
+<h1 class="title toc-ignore">Description of a categorical variable using textual data</h1>
 
 </div>
 
@@ -378,6 +378,10 @@ div.tocify {
 <div id="the-interface" class="section level2">
 <h2><strong>The interface</strong></h2>
 <p>Like the other two methods of the <strong>Automatic Univariate Description</strong> submenu, the GUI is very minimalist and only let you select the variable to describe, the textual variable used for the description and the significance threshold. <img src="images/textual2.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="potential-issues" class="section level2">
+<h2><strong>Potential issue(s)</strong></h2>
+<p>Unlike the first <strong>Automatic Univariate Description</strong> method, you shouldn’t try to set a significance threshold too high. Otherwise, the analysis will run for a very long time (since there might be hundreds of different words) and might not even finish.</p>
 </div>
 <div id="example" class="section level2">
 <h2><strong>Example</strong></h2>
